[gd_scene load_steps=89 format=2]

[ext_resource path="res://sprites/spritesheets/player/player-run.png" type="Texture" id=1]
[ext_resource path="res://sprites/spritesheets/player/player-idle.png" type="Texture" id=2]
[ext_resource path="res://sprites/spritesheets/player/player-jump.png" type="Texture" id=3]
[ext_resource path="res://sprites/spritesheets/player/player-jump-shadow.png" type="Texture" id=4]
[ext_resource path="res://sprites/spritesheets/player/player-stand.png" type="Texture" id=5]
[ext_resource path="res://sprites/spritesheets/player/player-run-shoot.png" type="Texture" id=6]
[ext_resource path="res://sprites/spritesheets/player/player-run-shadow.png" type="Texture" id=7]
[ext_resource path="res://sprites/spritesheets/player/player-stand-shadow.png" type="Texture" id=8]
[ext_resource path="res://sprites/spritesheets/player/player-hurt.png" type="Texture" id=9]
[ext_resource path="res://scripts/player.gd" type="Script" id=10]
[ext_resource path="res://Bullet.tscn" type="PackedScene" id=11]
[ext_resource path="res://sprites/spritesheets/player/player-idle-shadow.png" type="Texture" id=12]
[ext_resource path="res://sprites/spritesheets/player/player-hurt-shadow.png" type="Texture" id=13]
[ext_resource path="res://sprites/spritesheets/player/player-run-shoot-shadow.png" type="Texture" id=14]
[ext_resource path="res://Paradox.tscn" type="PackedScene" id=15]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 560, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 640, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 720, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="SpriteFrames" id=71]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "damage",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "jump",
"speed": 15.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "run",
"speed": 15.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "run_shadow",
"speed": 15.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "idle_shadow",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ) ],
"loop": true,
"name": "run_shoot_shadow",
"speed": 15.0
}, {
"frames": [ SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": true,
"name": "jump_shadow",
"speed": 15.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 55 ) ],
"loop": true,
"name": "shoot_shadow",
"speed": 5.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "run_shoot",
"speed": 15.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ SubResource( 69 ), SubResource( 70 ) ],
"loop": false,
"name": "damage_shadow",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=72]
extents = Vector2( 10.8877, 17.3011 )

[sub_resource type="RectangleShape2D" id=73]
extents = Vector2( 10, 12.5769 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 4
script = ExtResource( 10 )
jump_power = 500.0
gravity = 50.0
shot_cooldown = 5.0
max_jumps = 1
bullet_scene = ExtResource( 11 )
shot_speed = 600.0
paradox_scene = ExtResource( 15 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 71 )
animation = "shoot_shadow"

[node name="StandingCollider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7.25 )
shape = SubResource( 72 )

[node name="DuckCollider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 4, 12 )
shape = SubResource( 73 )

[node name="Muzzle" type="Node2D" parent="."]
position = Vector2( 13.6759, -2.67571 )
[connection signal="damage" from="." to="." method="_on_Player_damage"]
[connection signal="paradox" from="." to="." method="_on_Player_paradox"]
[connection signal="set_shadow" from="." to="." method="_on_Player_set_shadow"]
